tests/valid/test_type_77.wyal
assert:
    forall((int&null) x):
        (x is int)
