tests/invalid/test_072.wyal
type x is (int&!int r)

